# DNA2Protein

./: .gitignore  CONTRIBUTING.md  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml
DNA2protein_app/: app.py  pyproject.toml
DNA2protein_app/dna2protein_app/: app.py
