[tool.poetry]
name = "dna2protein-app"
version = "0.1.0"
description = ""
authors = ["Bjorn99 <61169176+Bjorn99@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "app.py"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
gunicorn = "^23.0.0"
python-dotenv = "^1.0.1"
biopython = "^1.84"
requests = "^2.32.3"
numpy = "^2.1.3"
aiohttp = "^3.10.10"
Werkzeug = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
